fix: change overflow-x, display to block of table

--- a/src/themes/ivpn-v3/assets/scss/elements/table.scss
+++ b/src/themes/ivpn-v3/assets/scss/elements/table.scss
@@ -1,6 +1,8 @@
 table {
     width: 100%;
     margin-bottom: 24px;
+    overflow-x: auto;
+    display: block;
 
     th {
         padding: 20px;
